2002-08-30  Adam Fedor  <fedor@gnu.org>

	* Version: 1.5.0

2002-08-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Implemented new MacOS-X methods -
	([-stringByPaddingToLength:withString:startingAtIndex:]), and
	([-stringByTrimmingCharactersInSet:])
	Tidied a couple of extension method names for consistency and
	documented several methods.

2002-08-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: Get libxml to put filename in error
	messages when it is available.

2002-08-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Rewritten the way that iconv is used to decide
	upon the available encodings ... lazy evaluation so that we don't
	try to lookup an encoding until we have to.  This should improve
	process startup time (especially in gdb) since the iconv operations
	seem to be very slow.

2002-08-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: Integrated GSXPath code by Nicola Pero
	provides an API to use the xpath support built into libxml from
	version 2.3 onwards.
	* Source/NSThread.m: Implement new priority methods.
	* Source/NSObject.m: Raise exception when passed null selector.

2002-08-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: ([-writeToFile:atomically:]) Removed bogus line
	which deleted files when it shouldn't.
	Added new MacOS-X methods supporting NSData objects where the bytes
	are not owned by the data object.  Removed GNUstep extension which
	provided this functionality before.
	* Source/NSUserDefaults.m: Use distributed lock to ensure that there
	is no possible window when the defaults file is invalid ... not all
	systems guarantee that the rename() system call is atomic.
	* Source/NSArray.m: New MacOS-X methods ([-initWithArray:copyItems:])
	([-exchangeObjectAtIndex:withObjectAtIndex:])
	* Source/NSTimer.m: Update for compatibility with latest MacOS-X
	* Source/NSObject.m: New ([+isSubclassOfClass:]) and perform
	cancellation from MacOS-X