@@ -1,3 +1,11 @@
+2002-09-08  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Headers/gnustep/base/GSIArray.h: Minor optimisation
+	* Headers/gnustep/unicode/gsm0338.h: Correct unicode to gsm table
+	* Source/Unicode.m: Correct gsm conversion and optimise unicode to
+	8-bit charaacter conversion for other character sets. Also correct
+	lossy/non-lossy conversion using iconv.
+
 2002-08-30  Adam Fedor  <fedor@gnu.org>
 
 	* Version: 1.5.0
